cmake_minimum_required(VERSION 3.16)
project(Leetcode)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 99)

add_executable(Leetcode main.cpp)

# leetcode 1-100
add_executable(leetcode1 Leetcode1-100/leetcode1.cpp)
add_executable(leetcode2 Leetcode1-100/leetcode2.cpp)
add_executable(leetcode3 Leetcode1-100/leetcode3.cpp)
add_executable(leetcode4 Leetcode1-100/leetcode4.cpp)
add_executable(leetcode5 Leetcode1-100/leetcode5.cpp)
add_executable(leetcode6 Leetcode1-100/leetcode6.cpp)
add_executable(leetcode7 Leetcode1-100/leetcode7.cpp)
add_executable(leetcode8 Leetcode1-100/leetcode8.cpp)
add_executable(leetcode9 Leetcode1-100/leetcode9.cpp)
add_executable(leetcode10 Leetcode1-100/leetcode10.cpp)
add_executable(leetcode11 Leetcode1-100/leetcode11.cpp)
add_executable(leetcode12 Leetcode1-100/leetcode12.cpp)
add_executable(leetcode13 Leetcode1-100/leetcode13.cpp)
add_executable(leetcode14 Leetcode1-100/leetcode14.cpp)
add_executable(leetcode15 Leetcode1-100/leetcode15.cpp)
add_executable(leetcode16 Leetcode1-100/leetcode16.cpp)
add_executable(leetcode17 Leetcode1-100/leetcode17.cpp)
add_executable(leetcode18 Leetcode1-100/leetcode18.cpp)
add_executable(leetcode19 Leetcode1-100/leetcode19.cpp)
add_executable(leetcode20 Leetcode1-100/leetcode20.cpp)
add_executable(leetcode21 Leetcode1-100/leetcode21.cpp)
add_executable(leetcode22 Leetcode1-100/leetcode22.cpp)
add_executable(leetcode23 Leetcode1-100/leetcode23.cpp)
add_executable(leetcode24 Leetcode1-100/leetcode24.cpp)
add_executable(leetcode25 Leetcode1-100/leetcode25.cpp)
add_executable(leetcode26 Leetcode1-100/leetcode26.cpp)
add_executable(leetcode27 Leetcode1-100/leetcode27.cpp)

# 牛客题目
add_executable(NC51 NowCoder/NC51.cpp)

# 牛客剑指Offer题目
add_executable(jz6 JZ/LinkedList/jz6.cpp)
add_executable(jz18 JZ/LinkedList/jz18.cpp)
add_executable(jz22 JZ/LinkedList/jz22.cpp)
add_executable(jz23 JZ/LinkedList/jz23.cpp)
add_executable(jz24 JZ/LinkedList/jz24.cpp)
add_executable(jz25 JZ/LinkedList/jz25.cpp)
add_executable(jz35 JZ/LinkedList/jz35.cpp)
add_executable(jz52 JZ/LinkedList/jz52.cpp)
add_executable(jz76 "JZ/LinkedList/jz76(not).cpp")
add_executable(jz29 JZ/Simulation/jz29.cpp)
add_executable(jz9 JZ/StackQueue/jz9.cpp)
add_executable(jz30 JZ/StackQueue/jz30.cpp)
add_executable(jz31 "JZ/StackQueue/jz31(not).cpp")
add_executable(jz73 JZ/StackQueue/jz73.cpp)



# 数据结构
add_executable(BiTreeC DataStructure/BiTree/BiTree.c)
add_executable(merge DataStructure/Sort/merge.cpp)




